Testing/MatrixClassTests/resolvingMatrixFunctions/slicing/Debug/com_slicing.txt
g++ -O3 -DNDEBUG -std=c++11 -I.   -c -o Domain/Domain_initDomain.o Domain/Domain_initDomain.cpp
g++ -O3 -DNDEBUG -std=c++11 -I.   -c -o Global/Global_declarations.o Global/Global_declarations.cpp
g++ -O3 -DNDEBUG -std=c++11 -I.   -c -o Global/Global_initGlobals.o Global/Global_initGlobals.cpp
g++ -O3 -DNDEBUG -std=c++11 -I.   -c -o User/User_main.o User/User_main.cpp
User/User_main.cpp: In function ‘int main(int, char**)’:
User/User_main.cpp:96:2: error: expected primary-expression before ‘?’ token
  ??? fct_getSlice_2;
  ^
User/User_main.cpp:96:3: error: expected primary-expression before ‘?’ token
  ??? fct_getSlice_2;
   ^
User/User_main.cpp:96:4: error: expected primary-expression before ‘?’ token
  ??? fct_getSlice_2;
    ^
User/User_main.cpp:96:6: error: ‘fct_getSlice_2’ was not declared in this scope
  ??? fct_getSlice_2;
      ^~~~~~~~~~~~~~
User/User_main.cpp:96:6: note: suggested alternative: ‘fct_getSlice_1’
  ??? fct_getSlice_2;
      ^~~~~~~~~~~~~~
      fct_getSlice_1
User/User_main.cpp:96:20: error: expected ‘:’ before ‘;’ token
  ??? fct_getSlice_2;
                    ^
User/User_main.cpp:96:20: error: expected primary-expression before ‘;’ token
User/User_main.cpp:96:20: error: expected ‘:’ before ‘;’ token
User/User_main.cpp:96:20: error: expected primary-expression before ‘;’ token
User/User_main.cpp:96:20: error: expected ‘:’ before ‘;’ token
User/User_main.cpp:96:20: error: expected primary-expression before ‘;’ token
<builtin>: recipe for target 'User/User_main.o' failed
make: *** [User/User_main.o] Error 1
